Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4067

bad error return from osd_object_create()

XMLWordPrintable

    • 3
    • 10901

      An error path in the ZFS osd_object_create() applies PTR_ERR() to the valid thandle pointer:

              db = osd_create_type_f(dof->dof_type)(env, osd, attr, zapid, oh);
              if (IS_ERR(db))
                      GOTO(out, rc = PTR_ERR(th));
      

      Surely PTR_ERR(db) should be used instead. This was found using one of the coccinelle example scripts.

      Also 'Quota' is misspelled in a comment.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: