LU-4067 osd: apply PTR_ERR() to right pointer

In ofd_precreate_objects(), osd_index_ea_insert(), and
osd_object_create() ensure that PTR_ERR() is applied to the right
pointer. Also convert some explicit casts of ERR_PTRs to ERR_CAST()
calls.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I846b10543ae426652ad72c277d2c0f0bc259fd6e
Reviewed-on: http://review.whamcloud.com/7887
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>